--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,22 +13,22 @@
         <div class="logo">CrowdStarter</div>
         <div class="wallet-container">
             <div id="network-badge" class="badge hidden">Checking...</div>
-            <button id="connect-btn" class="btn-primary">
-                Connect MetaMask
-            </button>
+            <div id="status-badge" class="badge hidden">Wait</div>
+            
+            <button id="connect-btn" class="btn-primary">Connect MetaMask</button>
             <span id="user-address" class="address hidden"></span>
         </div>
     </header>
 
     <main>
-        <h1>Welcome to Decentralized Funding</h1>
-        <p class="subtitle">Secure, transparent, blockchain-based.</p>
+        <h1>Decentralized Crowdfunding</h1>
+        <p class="subtitle">Secure, transparent, blockchain-based fundraising.</p>
         
         <div class="content-placeholder">
-            <p>Campaigns will load here...</p>
+            <p>Connect your wallet to view active campaigns.</p>
         </div>
     </main>
 
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
