added Launch a Campaign

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,6 +33,16 @@
                 </div>
                 <button id="btnRefresh" class="btn-secondary">🔄 Refresh</button>
             </div>
+
+            <div class="create-container">
+                <h2>Launch a Campaign</h2>
+                <div class="form-row">
+                    <input type="text" id="new-title" placeholder="Campaign Title">
+                    <input type="number" id="new-goal" placeholder="Goal (ETH)">
+                    <input type="number" id="new-duration" placeholder="Duration (seconds)">
+                    <button id="btnCreate" class="btn-primary">Create Campaign</button>
+                </div>
+            </div>
         </section>
 
         <section id="campaigns-section" class="hidden">
@@ -47,7 +57,7 @@
         </section>
 
         <div id="connect-placeholder" class="content-placeholder">
-            <p>Connect your wallet to view dashboard.</p>
+            <p>Connect your wallet to start.</p>
         </div>
     </main>
 
