some changes in front n packages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,7 +31,7 @@
                     <h3>Reward Tokens</h3>
                     <p id="tokBal">0.00 RWD</p>
                 </div>
-                <button id="btnRefresh" class="btn-secondary">🔄 Refresh</button>
+                <button id="btnRefresh" class="btn-secondary">Refresh</button>
             </div>
 
             <div class="create-container">
