--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,6 +61,8 @@
         </div>
     </main>
 
+    <script src="js/config.js"></script>
+    <script src="js/ui.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
